<resources>
    <string name="app_name">GeekBrainsPhotos</string>

    <!--toolbar-->
    <string name="toolbar_search_title">Search</string>
    <string name="toolbar_camera_title">Camera photos</string>
    <string name="toolbar_favorites_title">Favorites</string>
    <string name="toolbar_app_theme_title">Color theme</string>

    <!--navigation-->
    <string name="drawer_title">PhotosApp</string>
    <string name="drawer_subtitle">geekbrains.ru</string>

    <string name="drawer_home_title">Home</string>
    <string name="drawer_settings_title">Settings</string>
    <string name="drawer_search_item">Search photos online</string>
    <string name="drawer_camera_item">Camera photos</string>
    <string name="drawer_favorites_item">Favorites photos</string>
    <string name="drawer_app_theme_item">Application color theme</string>

    <string name="bottom_search_item">Search photos</string>
    <string name="bottom_camera_item">Camera photos</string>
    <string name="bottom_favorites_item">Favorites</string>



    <string name="appbar_app_photo_details_title">Photo</string>
    <string-array name="home_tabs">
        <item>Online</item>
        <item>Saved</item>
    </string-array>

    <string name="delete_from_favorites_action">Delete from favorites</string>
    <string name="delete_from_device_action">Delete from device</string>

    <string name="open_drawer">Open navigation drawer</string>
    <string name="close_drawer">Close navigation drawer</string>

    <string name="search_hint">Enter photos theme</string>
    <string name="btn_red_theme">Red Theme</string>
    <string name="btn_blue_theme">Blue Theme</string>
    <string name="btn_green_theme">Green Theme</string>

    <string name="photo_successfully_added_message">Photo successfully added</string>
    <string name="photo_successfully_deleted_message">Photo successfully deleted</string>
    <string name="photo_successfully_deleted_from_favorites_message">Photo successfully deleted from favorites</string>
    <string name="photo_successfully_deleted_from_device_message">Photo successfully deleted from device</string>
    <string name="error_camera_open_message">Cannot open the camera</string>
    <string name="error_save_photo_message">Error saving photo</string>
    <string name="error_add_photo_to_favorites_message">Cannot add photo to favorites</string>
    <string name="error_delete_photo_from_favorites_message">Cannot delete photo from favorites</string>
    <string name="error_delete_photo_from_device_message">Cannot delete photo from device</string>
    <string name="error_delete_photo_message">Cannot delete photo</string>
    <string name="error_load_photo_message">Cannot load photo</string>
    <string name="error_network_connection_message">No network</string>
    <string name="error_download_photos_message">An error occurred while uploading photos</string>

    <string name="delete_photo_dialog_title">Do you really want to delete a photo?</string>
    <string name="delete_photo_dialog_delete">Delete</string>
    <string name="delete_photo_dialog_cancel">Cancel</string>

    <string name="gallery_photo_description">Photo</string>
    <string name="favorite_icon_description">Favorite</string>
    <string name="toolbar_photo_description">Toolbar</string>
</resources>
